k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devonn-backend
  namespace: devonn
spec:
  type: ClusterIP
  selector:
    app: devonn-backend
  ports:
    - name: http
      port: 80
      targetPort: http
